# RTES-Project

./: CMakeLists.txt  Explainme.md  Explainme_ImageDetect.md  Explainme_Navigate.md  Instructions.txt  README.md  rotate_robot_publisher.cpp  velocity_subscriber.cpp
ball_detection_pkg/: CMakeLists.txt
pkg_for_group/ball_detection_pkg/: ball_detection_instructions  package.xml
pkg_for_group/ball_detection_pkg/src/: ball_color_detector.cpp  ball_info_subscriber.cpp
pkg_for_group/robot_control_pkg/: Commands_for_navigation_Stack  README.md  package.xml
pkg_for_group/robot_control_pkg/Different_Implementations/FOR_GROUP/: frontier.py  left_right.py  robot_control_node.py
robot_launch_pkg/: package.xml  setup.cfg  setup.py
robot_launch_pkg/launch/: full_robot_launch.py
ros2_ws/: README_NAV.MD
ros2_ws/src/: .pre-commit-config.yaml
ros2_ws/src/command_processor_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/command_processor_pkg/command_processor_pkg/: command_processor_node.py
ros2_ws/src/object_detection_pkg/: package.xml  setup.py
ros2_ws/src/object_detection_pkg/object_detection_pkg/: object_detection_node.py
ros2_ws/src/robot_control_pkg/: CMakeLists.txt  setup.py
ros2_ws/src/robot_control_pkg/Different_Implementations/: Project.md  bug2.py  frontier.py  left_to_right.py  robot_control_node_livefromWK10.py
ros2_ws/src/robot_control_pkg/launch/: roaming_with_detection.launch.py
ros2_ws/src/robot_control_pkg/robot_control_pkg/: robot_control_node.py
ros2_ws/src/rosbot/: package.xml  rosbot_hardware.repos
ros2_ws/src/rosbot_bringup/: package.xml  setup.py
ros2_ws/src/rosbot_bringup/launch/: bringup.launch.py  combined.launch.py
ros2_ws/src/rosbot_bringup/test/: test_diff_drive_ekf.py  test_mecanum_ekf.py  test_multirobot_ekf.py  test_namespaced_diff_drive_ekf.py  test_namespaced_mecanum_ekf.py  test_utils.py
ros2_ws/src/rosbot_controller/: package.xml
ros2_ws/src/rosbot_controller/launch/: controller.launch.py
ros2_ws/src/rosbot_controller/test/: test_diff_drive_controllers.py  test_mecanum_controllers.py  test_multirobot_controllers.py  test_namespaced_diff_drive_controllers.py  test_namespaced_mecanum_controllers.py  test_xacro.py
ros2_ws/src/rosbot_description/: package.xml
ros2_ws/src/rosbot_gazebo/: package.xml
ros2_ws/src/rosbot_gazebo/launch/: simulation.launch (copy).py  simulation.launch.py  spawn.launch.py
ros2_ws/src/rosbot_gazebo/test/: test_diff_drive_simulation.py  test_mecanum_simulation.py  test_multirobot_diff_drive_simulation.py  test_multirobot_mecanum_simulation.py  test_namespaced_diff_drive_simulation.py  test_namespaced_mecanum_simulation.py  test_utils.py
ros2_ws/src/rosbot_utils/: package.xml
ros2_ws/src/rosbot_utils/rosbot_utils/: flash-firmware-usb.py  flash-firmware.py
ros2_ws/src/text_to_speech_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/text_to_speech_pkg/text_to_speech_pkg/: result_to_tts.py  tts_node.py  tts_publisher.py
ros2_ws/src/tutorial_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/tutorial_pkg/config/: 7995722?wrap=1  navigation.yaml
ros2_ws/src/tutorial_pkg/launch/: navigation.launch.py  slam.launch.py
ros2_ws/src/tutorial_pkg/maps/: map.pgm  map.yaml
ros2_ws/src/tutorial_pkg/rviz/: rosbot.rviz  rosbot2.rviz
