<?xml version="1.0"?>
<package format="3">
  <name>ball_detection_pkg</name>
  <version>0.0.1</version>
  <description>A ROS2 package for detecting and tracking ball colors and their coordinates</description>
  <maintainer email="your_email@todo.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
