<?xml version="1.0"?>
<package format="2">
  <name>command_processor_pkg</name>
  <version>0.0.1</version>
  <description>ROS 2 package for processing voice commands.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- If using other message types or packages, add them here -->
  <!-- <depend>speech_msgs</depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
